--- a/site/index.html
+++ b/site/index.html
@@ -34,8 +34,8 @@
             <div class="raspDownWrapper">
                 <img alt="utya2" src="./assets/imgs/utya_classic.webp">
                 <div class="raspDownTextWrapper">
-                    <div class="raspDownHeader">Расписание опять легло!</div>
-                    <div class="raspDownDesc">В моменте последней проверки расписания выяснилось, что сайт bincol.ru/rasp опять стал недоступен. Отображена последняя записанная информация.</div>
+                    <div class="raspDownHeader">Расписание или прокси опять легло!</div>
+                    <div class="raspDownDesc">В моменте последней проверки не удалось получить данные расписания. Возможно, проблема не в расписании. На данный момент отображена информация за последнее обновление.</div>
                     <div class="closeRaspDownWrapper">
                         <div class="btn2 closeRaspDownBtn">Ясно</div>
                     </div>
