--- a/site/app.html
+++ b/site/app.html
@@ -13,7 +13,10 @@
 <body>
     <div class="appDiv">
         <div class="adaptiveLayout">
-            <img alt="logo" src="./private/assets/imgs/logo.svg">
+            <div class="appCardHeader">
+                <img alt="logo" src="./private/assets/imgs/logo.svg">
+                <a href="https://altrasp.ru">Вернуться на главную</a>
+            </div>
             <div class="mainHeader">Приложение для Android</div>
             <div class="mainDesc">Доступ к расписанию в один клик</div>
             <a class="downloadBtn" href="./downloadables/altrasp_0.9.2.apk">Скачать</a>
