--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="appDiv">
-        <div class="deployedVer">0.9.2_26</div>
+        <div class="deployedVer">0.9.3_27</div>
         <div class="loadingScreen">
             <img alt="logoMin" src="./private/assets/imgs/logo_min.svg">
             <img alt="logoLoader" src="./private/assets/imgs/ring-resize.svg">
@@ -21,8 +21,8 @@
             <div class="raspDownWrapper">
                 <img alt="utya2" src="./private/assets/imgs/utya_classic.webp">
                 <div class="raspDownTextWrapper">
-                    <div class="raspDownHeader">Расписание или прокси опять легло!</div>
-                    <div class="raspDownDesc">В моменте последней проверки не удалось получить данные расписания. Возможно, проблема не в расписании. На данный момент отображена информация за последнее обновление.</div>
+                    <div class="raspDownHeader">Расписание опять легло!</div>
+                    <div class="raspDownDesc">В моменте последней проверки не удалось получить данные расписания. На данный момент отображена информация за последнее обновление.</div>
                     <div class="closeRaspDownWrapper">
                         <div class="btn2 closeRaspDownBtn">Ясно</div>
                     </div>
@@ -54,9 +54,7 @@
                     <div class="h2">Возможно, данные пока не обновились</div>
                 </div>
                 <div class="loader" data-component-loader></div>
-                <div class="component subjectSchedule">
-
-                </div>
+                <div class="component subjectSchedule"></div>
             </div>
             <div class="latestInfo">
                 <span class="latestText">Информация за</span>
