--- a/site/index.html
+++ b/site/index.html
@@ -48,11 +48,11 @@
                 </div>
             </div>
             <div class="componentContainer">
-                <div class="noSubjectsScreen">
-                    <img alt="utya3" src="./private/assets/imgs/utya_confused.webp">
-                    <div class="h1">Пар не было найдено</div>
-                    <div class="h2">Возможно, данные пока не обновились</div>
-                </div>
+<!--                <div class="noSubjectsScreen">-->
+<!--                    <img alt="utya3" src="./private/assets/imgs/utya_confused.webp">-->
+<!--                    <div class="h1">Пар не было найдено</div>-->
+<!--                    <div class="h2">Возможно, данные пока не обновились</div>-->
+<!--                </div>-->
                 <div class="loader" data-component-loader></div>
                 <div class="component subjectSchedule"></div>
             </div>
