--- a/site/app.html
+++ b/site/app.html
@@ -19,8 +19,8 @@
             </div>
             <div class="mainHeader">Приложение для Android</div>
             <div class="mainDesc">Доступ к расписанию в один клик</div>
-            <a class="downloadBtn" href="./downloadables/altrasp_0.9.2.apk">Скачать</a>
-            <div class="fileInfo">altrasp_0.9.2.apk • 9.63 MB •<a href="https://www.virustotal.com/gui/file/0de1f4b6558b70388f19e743b79e36d67043158a827834a6d0ca33bed65fab4c?nocache=1" target="_blank">VirusTotal</a></div>
+            <a class="downloadBtn" href="./downloadables/altrasp.apk">Скачать</a>
+            <div class="fileInfo">altrasp.apk • 9.18 MB •<a href="https://www.virustotal.com/gui/file/24e256da355ff738ca29b12eebe7138030a0162045f669dc0343c1b0acd54804?nocache=1" target="_blank">VirusTotal</a></div>
         </div>
     </div>
 </body>
