Fixed .apk build

--- a/site/app.html
+++ b/site/app.html
@@ -20,7 +20,7 @@
             <div class="mainHeader">Приложение для Android</div>
             <div class="mainDesc">Доступ к расписанию за пару кликов</div>
             <a class="downloadBtn" href="./downloadables/altrasp.apk">Скачать</a>
-            <div class="fileInfo">altrasp.apk • 9.19 (9.63) MB •<a href="https://www.virustotal.com/gui/file/826dced8b4eaa62e69d366fda02881419965eee4af96dd3ee211107168800701?nocache=1" target="_blank">VirusTotal</a></div>
+            <div class="fileInfo">altrasp.apk • 9.19 (9.63) MB •<a href="https://www.virustotal.com/gui/file-analysis/M2Y4NjhlMTNmZWM1YzE5MGUyMTBlMzlhZDY4NTFiNzU6MTcyODkzOTQ4MQ==" target="_blank">VirusTotal</a></div>
         </div>
     </div>
 </body>
