--- a/site/app.html
+++ b/site/app.html
@@ -4,7 +4,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>AltRasp - App</title>
-    <link href="./private/assets/styles/app.css" rel="stylesheet">
+    <link href="private/assets/styles/app.css" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="./private/assets/imgs/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./private/assets/imgs/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./private/assets/imgs/favicon-16x16.png">
