--- a/site/index.html
+++ b/site/index.html
@@ -149,7 +149,7 @@
                     </div>
                 </div>
             </div>
-            <div class="curVer">0.11.0 Build 32 | xx.08.2025</div>
+            <div class="curVer">0.11.1 Build 33 | 31.08.2025</div>
         </div>
         <div class="primaryGroupSelectionScreen">
             <div class="innerContainer">
@@ -186,7 +186,5 @@
         }
     }
 </script>
-<script>
-    // document.querySelector('[data-action="settings"]').dispatchEvent(new Event('click'))
-</script>
+
 </html>
